@@ -1,3 +1,6 @@
+Oct 13, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- savage support, finally
+
 Oct 11, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - rework qstat version parser to be able to deal with any amount of data
 
